# cella1_ros

./: README.md
cella1_configurations/: CMakeLists.txt  package.xml
cella1_configurations/config/: controllers_configurations.yaml  controllers_dispatches.yaml  elmo_controllers.yaml  fake_elmo_hw.yaml  fake_ur5_hw.yaml  planner_controllers.yaml  planner_hw.yaml  thor_safety.yaml  trajectories.yaml  ur5_controllers.yaml  ur5_hw.yaml
cella1_configurations/launch/: tmp.launch  ur5.launch
cella1_descriptions/: CMakeLists.txt  package.xml
cella1_descriptions/launch/: dimostratore.rviz
cella1_descriptions/urdf/: ur10.xacro  ur5.xacro
cella1_moveit_benchmark/: CMakeLists.txt  package.xml
cella1_moveit_benchmark/config/: benchmark1.yaml
cella1_moveit_benchmark/launch/: benchamrk.launch
cella1_safety/: CMakeLists.txt  package.xml
cella1_safety/launch/: thor_ssm.launch
cella1_sensors/: CMakeLists.txt  package.xml
cella1_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cella1_ur5_moveit_config/config/: dirrt_planning.yaml  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml  static_cell.srdf
cella1_ur5_moveit_config/default_warehouse_mongo_db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-120172462060430166.wt  collection-10-120172462060430166.wt  collection-13-120172462060430166.wt  collection-16-120172462060430166.wt  collection-18-120172462060430166.wt  collection-2-120172462060430166.wt  collection-24-120172462060430166.wt  collection-27-120172462060430166.wt  collection-30-120172462060430166.wt  collection-33-120172462060430166.wt  collection-44-120172462060430166.wt  collection-55-120172462060430166.wt  collection-66-120172462060430166.wt  collection-7-120172462060430166.wt  index-1-120172462060430166.wt  index-11-120172462060430166.wt  index-12-120172462060430166.wt  index-14-120172462060430166.wt  index-15-120172462060430166.wt  index-17-120172462060430166.wt  index-19-120172462060430166.wt  index-20-120172462060430166.wt  index-25-120172462060430166.wt  index-26-120172462060430166.wt  index-28-120172462060430166.wt  index-29-120172462060430166.wt  index-3-120172462060430166.wt  (+9 more)
dimostratore_configurations/: CMakeLists.txt  package.xml
dimostratore_descriptions/: CMakeLists.txt  package.xml
dimostratore_descriptions/launch/: cella_ur10_test.launch  cella_ur10_upload.launch  cella_ur5_test.launch  cella_ur5_upload.launch  completo_test.launch  completo_upload.launch
dimostratore_descriptions/urdf/: cella_ur10.xacro  cella_ur5.xacro  completo.xacro  fixed_parts.xacro  ur10.xacro  ur5.xacro
dimostratore_sensors/: CMakeLists.txt  package.xml
stiima_lab_descriptions/: CMakeLists.txt  package.xml
stiima_lab_descriptions/meshes/collision/: inbound_box.stl
stiima_lab_descriptions/urdf/: box.urdf.xacro  calibration_fixed.xacro  conveyor_system.urdf.xacro  elmo_linear_guide_standalone.xacro  kinect_description.urdf.xacro  palmo.urdf.xacro  robotiq_85_gripper.urdf.xacro
stiima_lab_descriptions/urdf/human14dof/: human14dof.urdf.xacro
(+103 files in other folders)
