<?xml version="1.0"?>
<package format="2">
  <name>cella1_safety</name>
  <version>0.0.0</version>
  <description>The cella1_safety package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>

<license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cella1_descriptions</build_depend>
  <build_depend>velocity_scaling_iso15066</build_depend>
  <build_export_depend>cella1_descriptions</build_export_depend>
  <build_export_depend>velocity_scaling_iso15066</build_export_depend>
  <exec_depend>cella1_descriptions</exec_depend>
  <exec_depend>velocity_scaling_iso15066</exec_depend>

  <export>
  </export>
</package>
