<?xml version="1.0"?>
<package format="2">
  <name>cella1_sensors</name>
  <version>0.0.0</version>
  <description>The cella1_sensors package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cella1_descriptions</exec_depend>

  <export>
  </export>
</package>
