<?xml version="1.0"?>
<package format="2">
  <name>dimostratore_descriptions</name>
  <version>0.0.0</version>
  <description>The dimostratore_descriptions package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>stiima_lab_descriptions</build_depend>
  <build_depend>ur_description</build_depend>
  <build_export_depend>stiima_lab_descriptions</build_export_depend>
  <build_export_depend>ur_description</build_export_depend>
  <exec_depend>stiima_lab_descriptions</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_2f_85_gripper_visualization</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
